--- a/css/style.css
+++ b/css/style.css
@@ -193,9 +193,13 @@ main .section1 {
   padding: 30px;
 }
 
-#apropos {
+#apropos,
+#competences,
+#portfolio,
+#contact {
   text-align: center;
   margin: 20px 0;
+  font-size: ;
 }
 
 .competences {
@@ -204,6 +208,17 @@ main .section1 {
   width: 90%;
   margin: 20px auto;
 }
+
+.projets {
+  display: flex;
+  justify-content: center;
+  width: 90%;
+  margin: 20px auto;
+  text-align: center;
+}
+
+
+
 
 /*responsive*/
 
@@ -525,4 +540,162 @@ container .contactInfo {
 .mentions:hover {
   color: #d13639;
   transition: 0.8 all;
+}
+
+
+.contact {
+  position: relative;
+  min-height: 100vh;
+  padding: 50px 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+
+}
+
+.contact .content h2 {
+  font-size: 36px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.section2 h2 {
+  font-size: 36px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.portfolio h2 {
+  font-size: 36px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.ap {
+  font-size: 36px;
+  font-weight: 500;
+  text-align: center;
+}
+
+
+.contact .content p {
+  font-weight: 300;
+  text-align: center;
+}
+
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.container .contactInfo {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.container .contactInfo .box {
+  position: relative;
+  padding: 20px 0;
+  display: flex;
+}
+
+.container .contactInfo .box .ico {
+  min-width: 60px;
+  height: 60px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  font-size: 22px;
+
+}
+
+.container .contactInfo .box .text {
+  display: flex;
+  margin-left: 20px;
+  font-size: 16px;
+  color: #fff;
+  flex-direction: column;
+  font-weight: 300;
+}
+
+.container .contactInfo .box .text h3 {
+  font-weight: 500;
+  color: #d13639;
+}
+
+.bloc-contact {
+  background: #02010161;
+  padding: 30px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+
+}
+
+.contactform {
+  width: 60%;
+  padding: 0 40px;
+}
+
+
+.contactform .inputbox {
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.contactform .inputbox input,
+.contactform .inputbox textarea {
+  width: 100%;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  border: 2px solid #333;
+  border-radius: 3px;
+  outline: none;
+  resize: none;
+
+}
+
+.contactform .inputbox input[type="submit"] {
+  width: 100px;
+  background: #d13639;
+  color: #ffff;
+  border: none;
+  cursor: pointer;
+  padding: 8px;
+  font-size: 18px;
+}
+
+@media (max-width:991px) {
+  .contact {
+    padding: 50px;
+
+  }
+
+  .container {
+    flex-direction: column;
+  }
+
+  .container .contactInfo {
+    margin-bottom: 40px;
+
+  }
+
+  .container .contactInfo,
+  .contactform {
+    width: 100%;
+
+  }
 }
