--- a/css/style.css
+++ b/css/style.css
@@ -195,18 +195,11 @@ main .section1 {
   padding: 30px;
 }
 
-#apropos,
-#competences,
-#portfolio,
-#contact {
-  text-align: center;
-  margin: 20px 0;
-  font-size: ;
-}
 
 .competences {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 90%;
   margin: 20px auto;
 }
@@ -214,6 +207,7 @@ main .section1 {
 .projets {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 90%;
   margin: 20px auto;
   text-align: center;
@@ -560,6 +554,7 @@ container .contactInfo {
   font-size: 36px;
   font-weight: 500;
   text-align: center;
+  padding-top: 30px;
 }
 
 .section2 {
@@ -570,24 +565,29 @@ container .contactInfo {
   font-size: 36px;
   font-weight: 500;
   text-align: center;
+
 }
 
 .portfolio h2 {
   font-size: 36px;
   font-weight: 500;
   text-align: center;
+  padding-top: 30px;
 }
 
 #portfolio {
   font-size: 36px;
   font-weight: 500;
   text-align: center;
+  padding-top: 30px;
+  padding-bottom: 20px;
 }
 
 .ap {
   font-size: 36px;
   font-weight: 500;
   text-align: center;
+  padding-top: 30px;
 }
 
 
@@ -712,5 +712,46 @@ container .contactInfo {
   .contactform {
     width: 100%;
 
+  }
+}
+
+
+@media (max-width:991px) {
+
+  .section1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .competences {
+    display: flex;
+    flex-direction: column;
+    padding: 20px auto;
+  }
+
+  .competences .code {
+    width: 100%;
+  }
+
+  .skills {
+    width: 100%;
+    padding-bottom: 20px;
+  }
+
+  .maphoto {
+    width: 100%;
+    padding: 20px;
+  }
+
+  .projets {
+    display: flex;
+    flex-direction: column;
+    margin: 50 px;
+  }
+
+  .bloc-contact {
+    flex-direction: column;
   }
 }
